--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 <body>
 <h1>hola mundo</h1>
 <p>este es un nuevo cambio</p>
+
+<article>
+	<p>estamos trabajando en github, probando cosas <a href="#">botón</a></p>
+</article>
 </body>
 </html>
